# wtg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile  pyproject.toml
.claude/commands/: release.md
.config/: nextest.toml
.github/workflows/: build-py-wheels.yml  ci.yml  publish-test-pypi.yml  release.yml
crates/wtg/: Cargo.toml
crates/wtg-python/: Cargo.toml
crates/wtg-python/src/: lib.rs
crates/wtg/src/: changelog.rs  cli.rs  error.rs  git.rs  github.rs  help.rs  identifier.rs  lib.rs  main.rs  notice.rs  output.rs  parse_input.rs  parse_url.rs  release_filter.rs  remote.rs  repo_manager.rs  resolution.rs  semver.rs
crates/wtg/src/backend/: combined_backend.rs  git_backend.rs  github_backend.rs  mod.rs
crates/wtg/tests/: integration.rs  offline.rs
crates/wtg/tests/snapshots/: integration__integration_identify_tag.snap
docs/plans/: 2026-01-19-tag-identification-output-design.md  2026-01-19-tag-identification-output-plan.md  2026-02-14-fix-missing-notice-anonymous-fallback.md
src/wtg_cli/: __init__.py
