[workspace]
resolver = "2"
members = ["crates/wtg"]
default-members = ["crates/wtg"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Mike Perlov"]
license = "MIT"
repository = "https://github.com/mishamsk/wtg"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Disable specific pedantic lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
git2 = "0.20.2"
octocrab = "0.47.0"
crossterm = "0.29.0"
anyhow = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
chrono = "0.4"
