[package]
name = "wtg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
git2 = { workspace = true }
octocrab = { workspace = true }
ratatui = { workspace = true }

[lints]
workspace = true
