[package]
name = "wtg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
git2 = { workspace = true }
octocrab = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
